fix editsnav breakdown on smaller screens

--- a/src/sass/components/EditsNav.scss
+++ b/src/sass/components/EditsNav.scss
@@ -3,18 +3,11 @@
   text-align: center;
   ul.usa-nav-primary {
     li {
-      width: 20%;
       text-align: center;
       margin-bottom: 2em;
-
-      // the edits nav breaks down at 963 and below because the "syntactical and validity edits" gets broken into 2 lines
-      @media screen and (max-width: 963px) {
-        position: relative;
-        top: -13px;
-        &.syntacticalvalidity {
-          top: 0;
-        }
-      }
+      vertical-align: top;
+      width: 20%;
+      
       .step {
         background-color: $color-white;
         border: 1px solid $color-gray-light;
